<resources>
    <string name="app_name">AmbulanceOnDemand</string>
    <string name="title_activity_maps">AmbulanceOnDemand</string>

    //landing page
    <string name="title_landing">Butuh Bantuan Darurat?</string>
    <string name="desc_landing">Hai #OrangBaik! Kamu menemukan kecelakaan atau keadaan darurat yang membutuhkan ambulan ? Gunakan fitur #PanggilAmbulan ini untuk memanggil ambulan secara gratis!</string>
    <string name="puncLine_landing">Mari bantu sesama, mari tolong menolong. Jika bukan kita siapa lagi ?</string>
    <string name="button_landing">Panggil Ambulan</string>
    <string name="hint_location_landing">Lokasi Sekarang</string>
    <string name="start_running">Start Running</string>
    <string name="stop_running">Stop Running</string>
    <string name="start_point">Start Point</string>

    //Result Page
    <string name="TitlePickUpLocation">Lokasi Jemput,</string>
    <string name="TitleDropOutLocation">Lokasi Antar,</string>
    <string name="Hint_DropOut_Location">Lokasi Tujuan</string>
    <string name="Ambulance_Title_Time_Picker">Ambulan akan tiba</string>
    <string name="Button_SMS">Kirim SMS</string>
    <string name="Button_Call">Hubungi</string>
    <string name="toogledropdown">ToogleDropdown</string>


    //camera page
    <string name="back_button_alt">Back</string>
    <string name="capture_button_alt">Capture</string>
    <string name="preview">Preview</string>
    <string name="flash_button">Flash Button</string>
    <string name="flip_button">Flip Button</string>
    <string name="not_permission">Have not permission</string>
    <string name="fail_take_photo">Fail to take a photo</string>
    <string name="fail_camera">Fail to launch camera</string>

    //maps
    <string name="base_url">https://maps.googleapis.com</string>

</resources>